// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Organisms/Header default 1`] = `
.c1 {
  width: calc(8px * 10);
  display: block;
  line-height: 1em;
}

.c2 {
  font-size: 5vw;
  font-weight: bold;
  color: #007f48;
  white-space: nowrap;
  overflow: hidden;
  padding: 0 calc(8px * 2);
}

.c3 {
  width: calc(8px * 10);
  display: block;
  line-height: 1em;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFBE8;
  border-bottom: solid 2px #babfbd;
  box-sizing: border-box;
  height: calc(8px * 6);
  padding: 0 calc(8px * 2);
}

.c0 a {
  color: #007f48;
  display: inline-block;
}

@media (min-width:380px) {
  .c2 {
    font-size: 20px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  />
  <h2
    className="c2"
  >
    Title
  </h2>
  <div
    className="c3"
  >
    <p>
      Right
    </p>
  </div>
</div>
`;

exports[`Storyshots Organisms/Header props left 1`] = `
.c1 {
  width: calc(8px * 10);
  display: block;
  line-height: 1em;
}

.c2 {
  font-size: 5vw;
  font-weight: bold;
  color: #007f48;
  white-space: nowrap;
  overflow: hidden;
  padding: 0 calc(8px * 2);
}

.c3 {
  width: calc(8px * 10);
  display: block;
  line-height: 1em;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFBE8;
  border-bottom: solid 2px #babfbd;
  box-sizing: border-box;
  height: calc(8px * 6);
  padding: 0 calc(8px * 2);
}

.c0 a {
  color: #007f48;
  display: inline-block;
}

@media (min-width:380px) {
  .c2 {
    font-size: 20px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <p>
      Left
    </p>
  </div>
  <h2
    className="c2"
  >
    Title
  </h2>
  <div
    className="c3"
  >
    <p>
      Right
    </p>
  </div>
</div>
`;

exports[`Storyshots Organisms/Header props left is ArrowBtton and right is AddButton 1`] = `
.c3 {
  margin: 0;
  padding: 0;
  border: 0;
  background: none;
  font-size: 100%;
  vertical-align: baseline;
  font-family: inherit;
  font-weight: inherit;
  color: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c3:hover {
  cursor: pointer;
}

.c3:focus {
  outline: 0;
}

.c4 {
  display: inline-block;
  margin: 0.1em;
  box-sizing: border-box;
}

.c4 > svg {
  width: 24px;
  height: 24px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
  background-color: #007f48;
  padding: 8px;
  width: 100%;
}

.c7 svg {
  width: 18px;
  height: 18px;
  display: block;
  margin: 0 6px 0 0;
}

.c7 svg > circle {
  fill: #fff !important;
}

.c7 svg > line {
  stroke: #007f48 !important;
}

.c7 span {
  display: block;
  color: #fff;
  font-weight: bold;
  line-height: 1em;
}

.c2 {
  display: block;
  line-height: 0;
}

.c2 svg {
  width: 24px;
  height: 24px;
}

.c2 svg path {
  fill: #007f48 !important;
}

.c1 {
  width: calc(8px * 10);
  display: block;
  line-height: 1em;
}

.c5 {
  font-size: 5vw;
  font-weight: bold;
  color: #007f48;
  white-space: nowrap;
  overflow: hidden;
  padding: 0 calc(8px * 2);
}

.c6 {
  width: calc(8px * 10);
  display: block;
  line-height: 1em;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFBE8;
  border-bottom: solid 2px #babfbd;
  box-sizing: border-box;
  height: calc(8px * 6);
  padding: 0 calc(8px * 2);
}

.c0 a {
  color: #007f48;
  display: inline-block;
}

@media (min-width:380px) {
  .c5 {
    font-size: 20px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <button
      className="c2 c3"
      onClick={[Function]}
    >
      <span
        className="c4"
        dangerouslySetInnerHTML={
          Object {
            "__html": Object {
              "default": "test-file-stub",
            },
          }
        }
        name="arrow"
        size="24px"
      />
    </button>
  </div>
  <h2
    className="c5"
  >
    Title
  </h2>
  <div
    className="c6"
  >
    <button
      className="c7 c3"
      onClick={[Function]}
    >
      <span
        className="c4"
        dangerouslySetInnerHTML={
          Object {
            "__html": Object {
              "default": "test-file-stub",
            },
          }
        }
        name="add"
        size="24px"
      />
      <span>
        追加
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Organisms/Header props right is AddButton 1`] = `
.c5 {
  margin: 0;
  padding: 0;
  border: 0;
  background: none;
  font-size: 100%;
  vertical-align: baseline;
  font-family: inherit;
  font-weight: inherit;
  color: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c5:hover {
  cursor: pointer;
}

.c5:focus {
  outline: 0;
}

.c6 {
  display: inline-block;
  margin: 0.1em;
  box-sizing: border-box;
}

.c6 > svg {
  width: 24px;
  height: 24px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
  background-color: #007f48;
  padding: 8px;
  width: 100%;
}

.c4 svg {
  width: 18px;
  height: 18px;
  display: block;
  margin: 0 6px 0 0;
}

.c4 svg > circle {
  fill: #fff !important;
}

.c4 svg > line {
  stroke: #007f48 !important;
}

.c4 span {
  display: block;
  color: #fff;
  font-weight: bold;
  line-height: 1em;
}

.c1 {
  width: calc(8px * 10);
  display: block;
  line-height: 1em;
}

.c2 {
  font-size: 5vw;
  font-weight: bold;
  color: #007f48;
  white-space: nowrap;
  overflow: hidden;
  padding: 0 calc(8px * 2);
}

.c3 {
  width: calc(8px * 10);
  display: block;
  line-height: 1em;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFBE8;
  border-bottom: solid 2px #babfbd;
  box-sizing: border-box;
  height: calc(8px * 6);
  padding: 0 calc(8px * 2);
}

.c0 a {
  color: #007f48;
  display: inline-block;
}

@media (min-width:380px) {
  .c2 {
    font-size: 20px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  />
  <h2
    className="c2"
  >
    Title
  </h2>
  <div
    className="c3"
  >
    <button
      className="c4 c5"
      onClick={[Function]}
    >
      <span
        className="c6"
        dangerouslySetInnerHTML={
          Object {
            "__html": Object {
              "default": "test-file-stub",
            },
          }
        }
        name="add"
        size="24px"
      />
      <span>
        追加
      </span>
    </button>
  </div>
</div>
`;
